Security_Groups.tf
# Allow 443 for package download, 80 for web-server, 22 for SSH and 2049 for EFS
resource "aws_security_group" "allow_conn" {
  name        = "allow_http"
  description = "Allow HTTP/S inbound connections"
  vpc_id      = aws_vpc.ec2_vpc.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Allow HTTP/S Security Group"
  }
}

# Allow 443 and 80 for the Load Balancer
resource "aws_security_group" "elb_allow_conn" {
  name        = "elb_http/s"
  description = "Allow HTTP/S traffic to instances through Elastic Load Balancer"
  vpc_id      = aws_vpc.ec2_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Allow HTTP/S through ELB Security Group"
  }
}
